Issue 27145: Force scrollbar

--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -1,4 +1,7 @@
 /* GLOBAL */
+html {
+	overflow-y: scroll;
+}
 body{
   background: none;
   background-color:#FFFFFF;
